💄 Fix layout shift at 480px width
Why:
- The language selector used to move a few pixels down when going below
  480px width, because Pure CSS changed the <label> to `display: block`.

--- a/web/src/layout/Layout.module.css
+++ b/web/src/layout/Layout.module.css
@@ -118,6 +118,11 @@ kbd {
 .nav-end {
     padding: 0 16px 4px;
 
+    :global .pure-form label {
+        /* prevent layout shift caused by Pure CSS's breakpoint at 480px width */
+        display: inline;
+    }
+
     @media (width >= 768px) {
         flex-grow: 1;
         display: flex;
